# markov

./: README.md  markov.cabal
app/: Main.hs
src/Text/Random/: Markov.hs
