name:                markov
version:             0.1.0.0
synopsis:            Markov-chain based text generator
description:         Please see README.md
homepage:            https://github.com/kmein/markov#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           (C) Kierán Meinhardt 2016
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Random.Markov
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , text
                     , vector
  default-language:    Haskell2010

executable markov
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , markov
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite markov-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markov
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/markov
